--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,18 @@
       <version>1.2</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+      <version>5.2.0.RELEASE</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+      <version>5.2.0.RELEASE</version>
+    </dependency>
+
   </dependencies>
 
   <build>
